# api_call_timer

./: Plot_Report.py  README.MD  StandardFinderCalls.py  TestCallTime.py  concat_df_to_csv.py  main.py  pyproject.toml  sites_to_call.py
plotter/dashboard/: main.py
plotter/dashboard/data/: df.pkl
plotter/dashboard/src/components/: bar_chart.py  call_dropdown.py  ids.py  layout.py  site_dropdown.py  site_info.py
